# broker-investor-agents-lite

./: .env.example  .gitignore  README.md  app.py  app_backup_v1.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
broker_investor_agents/: README.md  pyproject.toml
config/: benchmarks.yaml  markets.yaml
data/: portfolio_log.json
docs/: cli_command_map.json  intake_to_package_cli_guide.md  intake_to_package_evidence_checklist_schema.md  intake_to_package_implementation_sequence.md  intake_to_package_intake_schema.md  intake_to_package_mvp_completion_summary.md  intake_to_package_mvp_plan.md  intake_to_package_readiness_schema.md  market_data_provider_selection.md  restart_checklist.md  safe_operations_guide.md  task_143_phase_19_closure_summary.md  task_144_0_simplified_workflow_decision_note.md  task_144_10_readiness_schema_closure.md  task_144_11_implementation_sequence_closure.md  task_144_12_intake_validation_closure.md  task_144_13_evidence_checklist_closure.md  task_144_14_readiness_classification_closure.md  task_144_15_report_rendering_closure.md  task_144_16_artifact_writer_closure.md  task_144_17_intake_to_package_safety_review.md  task_144_17_safety_review_closure.md  task_144_18_cli_safety_contract.md  task_144_18_cli_safety_contract_closure.md  task_144_19_cli_insertion_point_inspection.md  task_144_1_project_status_report_summary.md  task_144_20_cli_implementation_closure.md  task_144_21_post_cli_smoke_test.md  task_144_22_cli_guide_closure.md  task_144_2_cli_command_inventory.md  task_144_2_cli_command_map_summary.md  (+22 more)
(+443 files in other folders)
