[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broker-investor-agents"
version = "0.1.0"
description = "Scaffold for broker backoffice data packs and investor-style analysis agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Broker Investor Agents Contributors" }
]
keywords = ["investing", "agents", "financial-analysis", "backoffice", "research"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "jinja2>=3.1",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "requests>=2.32",
  "typer>=0.12", "yfinance>=0.2", "streamlit>=1.0",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
broker-agents = "broker_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
